<resources>
    <string name="app_name">FreeChat</string>

    <string name="load_error">load failure</string>
    <string name="please_wait">Please Wait</string>
    <string name="complete">finish</string>
    <string name="set_fail">Setting Failed</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="sure">Ok</string>

    <!--Bind-->
    <string name="bind_bind">Bind</string>
    <string name="bind_account">Account</string>
    <string name="bind_nickname_hit">e.g: John</string>

    <!--闪屏页-->

    <!--登录-->
    <string name="account_not_empty">Account Must Be Not Empty</string>
    <string name="nickname_not_empty">NickName Must Be Not Empty</string>

    <!--注册-->
    <string name="nickname">Name</string>
    <string name="area">Region</string>

    <!--主界面-->
    <string name="message">FreeChat</string>
    <string name="contacts">Neighbors</string>
    <string name="discovery">Discover</string>
    <string name="me">Me</string>

    <!--最近会话-->
    <string name="draft">[Draft]</string>
    <string name="set_conversation_to_top">置顶聊天</string>

    <!--联系人-->
    <string name="group_cheat">Group Chat</string>
    <string name="load_contacts_error">Fail To Load Contact</string>
    <string name="count_of_contacts">%1$d Neighbors</string>

    <!--状态-->
    <string name="idle_state">Idle</string>
    <string name="member_state">Member</string>
    <string name="owner_state">Owner</string>

    <!--发现-->
    <string name="network_created">Your Meshee Network Created Successfully</string>
    <string name="scan_network">Scan Network</string>
    <string name="scan_network_idle">Scan Network (Idle)</string>
    <string name="no_network">No Meshee Network Points Found</string>
    <string name="back_to_idle">Back To Idle</string>

    <!--我-->
    <string name="my_chat_account">Account:%1$s</string>
    <string name="album">Album</string>
    <string name="setting">Setting</string>
    <string name="qr_code_network_tip">Scan the QR code to join my Meshee network</string>
    <string name="liveshow">LiveShow</string>
    <string name="meshshow">MeshShow</string>

    <!--我的个人信息-->
    <string name="header_pic">Profile Photo</string>
    <string name="wechat_account">Account</string>
    <string name="qr_code_network">Meshee Network QR code</string>

    <string name="push_avatar">Send Avatar</string>

    <!--新的朋友-->
    <string name="add_friend">Add Friend</string>
    <string name="clear_log">Clear Log</string>
    <string name="show_log">Display Log</string>
    <string name="create_owner">Create Network</string>
    <string name="restart_auto_join">Restart Auto Join</string>
    <string name="stop_auto_join">Stop Auto Join</string>
    <string name="enable_disconnect_background">Foreground Connection Only</string>
    <string name="disable_disconnect_background">Persistent Connection</string>
    <string name="create_group">Group Chat</string>
    <string name="scan_one_scan">Scan Join</string>

    <!--添加朋友-->
    <string name="create_group_face_to_face">Face To Face Create Group</string>



    <!--扫一扫-->
    <string name="scan_code">ScanBarCode</string>
    <string name="cover">Cover</string>
    <string name="street_scape">街景</string>
    <string name="translate">翻译</string>
    <string name="qr_cord_or_bar_code">二级码/条码</string>
    <string name="cover_or_movie_poster">封面/电影海报</string>
    <string name="select_qr_code_from_ablum">从相册选取二维码</string>
    <string name="scan_fail">扫描失败</string>
    <string name="open_camera_error">打开相机出错</string>

    <!--搜索用户-->
    <string name="search">搜索</string>

    <!--用户信息-->
    <string name="nickname_colon">昵称:%1$s</string>
    <string name="set_remark_and_tag">Set Remark and Tag</string>
    <string name="signature">What\'s Up</string>
    <string name="send_message">Send</string>
    <string name="add_to_contact">添加到通讯录</string>
    <string name="add_to_black_list">加入黑名单</string>
    <string name="delete">删除</string>
    <string name="add_to_desktop">添加到桌面</string>
    <string name="change_my_name_tip">Pick a name easier to rember.</string>

    <!--修改备注-->

    <!--文件-->
    <string name="click_to_receive">"Click to receive the file"</string>
    <string name="start_receive">"Start receiving"</string>
    <string name="error">"Error: "</string>
    <string name="receive_file">"Received the file"</string>
    <string name="receive_failure">"Receive Failed: "</string>

    <!--附言界面-->
    <string name="send">发送</string>

    <!--会话界面-->
    <string name="please_to_talk">Hold to Talk</string>
    <string name="shot">Camera</string>
    <string name="location">Location</string>
    <string name="file">File</string>

    <string name="no_support_msg_type">不支持的消息类型</string>

    <!--地图-->

    <!--创建群-->
    <string name="select_one_group">选择一个群</string>
    <string name="no_group_now">暂无群聊</string>

    <!--群信息-->
    <string name="group_name">群聊名称</string>
    <string name="untitled">未命名</string>
    <string name="group_qr_code">群二维码</string>
    <string name="group_announcement">群公告</string>
    <string name="message_free">消息免打扰</string>
    <string name="my_nickname_in_this_group">我在本群的昵称</string>
    <string name="show_group_member_name">显示群成员昵称</string>
    <string name="clear_chat_log">清空聊天记录</string>
    <string name="delete_and_exit">删除并退出</string>
    <string name="my_display_name_in_group">我在本群中的昵称</string>
    <string name="set_your_display_name_in_group">设置你在群里的昵称，这个昵称只会在这个群内显示</string>

    <!--设置-->
    <string name="about">About FreeChat</string>
    <string name="about_meshee_sdk">FreeChat uses Meshee SDK that supports the new-generation network technology. If you want to use Meshee SDK to develop your own App, please visit the following URL in your browser. Please note that \"Persistent Connection\" setting in menu may block your browser from accessing the Internet.</string>
    <string name="website_meshee_sdk">https://github.com/Meshee-cn/mesheesdk</string>
    <string name="exit">Exit</string>
    <string name="exit_account">Exit Account</string>
    <string name="exit_app">Close Freechat</string>

    <!--关于-->
    <string name="app_name_in_about">FreeChat</string>
    <string name="function_introduction">Introduction</string>
    <string name="complaint">Complaint</string>
    <string name="check_update">Check Update</string>
    <string name="terms_of_use_and_privacy_policy">Terms Of Use And Privacy Policy</string>

    <!-- for ijkplayer -->
    <string name="N_A">N/A</string>
    <string name="close">Close</string>
    <!-- string name="exit">Exit</string -->
    <string name="sample">Sample</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="tracks">Tracks</string>
    <string name="toggle_player">Player</string>
    <string name="toggle_render">Render</string>
    <string name="toggle_ratio">Scale</string>
    <string name="show_info">Info</string>
    <string name="vdec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="a_cache">a-cache</string>
    <string name="load_cost">load-cost</string>
    <string name="seek_cost">seek_cost</string>
    <string name="seek_load_cost">seek_load_cost</string>
    <string name="tcp_speed">tcp_speed</string>
    <string name="bit_rate">bit_rate</string>

    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>
    <string name="mi__selected_subtitle_track">*</string>

    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_unknown">Unknown</string>

    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_error_button">OK</string>

    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>

    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>

    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>
</resources>
