<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar"/>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="30px"
        android:paddingRight="30px">


        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="90px"
            android:layout_marginTop="40px"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="30px"
            android:paddingRight="30px">

            <TextView
                android:layout_width="120px"
                android:layout_height="wrap_content"
                android:text="@string/bind_account"
                android:textColor="@color/black0"
                android:textSize="28px"/>

            <!--EditText
                android:id="@+id/etAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="例如：freechat01"
                android:textColorHint="@color/gray3"
                android:textSize="28px"/ -->

            <!--Spinner android:id="@+id/Spinner01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/-->

            <com.reginald.editspinner.EditSpinner
                android:id="@+id/edit_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dropDownDrawable="@drawable/picker"
                app:dropDownDrawableSpacing="15dp"
                app:dropDownDrawableWidth="25dp"
                app:dropDownDrawableHeight="25dp"

                />

            <!--ListView
                android:id="@+id/loginQQList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"

                android:visibility="gone"
                android:divider="#aaaaaa"
                android:dividerHeight="0px"/ -->
            <!--ListView
                android:id="@+id/loginQQList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/registQQ"
                android:layout_alignLeft="@id/qqNum"
                android:layout_alignRight="@id/qqNum"
                android:layout_below="@id/qqNum"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:visibility="gone"
                android:divider="#aaaaaa"
                android:dividerHeight="0px"/ -->
            <!--EditText
                android:id="@+id/comboxAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="你的手机号码"
                android:inputType="phone"
                android:text=""
                android:textColorHint="@color/gray3"
                android:textSize="28px"/ -->

            <!--Spinner android:id="@+id/Spinner01"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"></Spinner-->

        </com.zhy.autolayout.AutoLinearLayout>

        <View
            style="@style/Line"
            />

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.zhy.autolayout.AutoLinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.zhy.autolayout.AutoLinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100px"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="30px"
                    android:paddingRight="30px">

                    <TextView
                        android:layout_width="120px"
                        android:layout_height="wrap_content"
                        android:text="@string/nickname"
                        android:textColor="@color/black0"
                        android:textSize="28px"/>

                    <EditText
                        android:id="@+id/etNick"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/bind_nickname_hit"
                        android:textColorHint="@color/gray3"
                        android:textSize="28px"/>

                </com.zhy.autolayout.AutoLinearLayout>

                <View
                    android:id="@+id/vLineNick"
                    style="@style/Line"
                    />
            </com.zhy.autolayout.AutoLinearLayout>

            <ImageView
                android:id="@+id/ivAlbum"
                android:layout_width="100px"
                android:layout_height="100px"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_launcher"
                android:visibility="gone"/>

        </com.zhy.autolayout.AutoLinearLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="90px"
            android:layout_marginBottom="30px"
            android:layout_marginTop="40px"
            android:background="@drawable/selector_login_btn"
            android:enabled="false"
            android:text="@string/bind_bind"
            android:textColor="@color/selector_login_btn"
            android:textSize="30px"/>
    </com.zhy.autolayout.AutoLinearLayout>


</com.zhy.autolayout.AutoLinearLayout>
